2004-11-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/selection-round.scm: moved into the
	<Image>/Select/Modify now that we can safely use placeholders from
	Script-Fu.

2004-11-19  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/lib.pl
	* tools/pdbgen/stddefs.pdb: added support for deprecated procedures
	without any replacement.

	* app/plug-in/plug-in-message.c (plug_in_handle_proc_run): added
	a special warning for procedures without replacement.

	* tools/pdbgen/pdb/drawable.pdb: deprecated drawable_set_image()
	without any replacement and made it a nop (which fails if the
	passed image is different from the drawable's image). It's not
	needed any longer since 2.0 and moreover dangerous to use.

	* app/pdb/drawable_cmds.c
	* libgimp/gimpdrawable_pdb.[ch]: regenerated.

	* app/core/gimpitem.c (gimp_item_set_image): replaced assertion
	for gimp_item_is_floating() by !gimp_item_is_attached(). The
	former warned when adding a layer with already added mask to the
	image (which is a perfectly valid operation).

2004-11-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/wmf.c: added a thumbnail load procedure
	(bug #158193).

2004-11-18  Michael Natterer  <mitch@gimp.org>

	Script-Fu string cleanup/simplification: apply the same fix for
	menu path translation that was done for plug-ins a while ago.

	* plug-ins/script-fu/script-fu.c (script_fu_auxillary_init): use
	gimp_plugin_menu_register() on the "Refresh" temp_proc.

	* plug-ins/script-fu/scripts/*.scm: ported all scripts to use
	script-fu-menu-register and pass just the menu label in
	script-fu-register. Cleaned up all register calls to share a
	somewhat similar formatting.

2004-11-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/postscript.c: changed the default to load only
	the first page of the document and added a tooltip describing how
	to specify what pages to get.

2004-11-18  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.c (file_open_thumbnail): fixed check for